[package]
name          = "reso"
version       = "0.0.3"
author        = ["Lynn Pepin <reso@lynndotpy.xyz>"]
edition       = "2021"
license-file  = "LICENSE"
description   = "Reso: A visual pixel-art logic-circuit design language"
repository    = "https://github.com/lynnpepin/reso-rust"
keywords      = ["utility", "mathematics", "simulation", "circuit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
image = "0.24.5"
